@@ -25,7 +25,6 @@ public class Solute {
 
     public final String name; // localized name
     public final String formula; // chemical formula, not localized
-    public final double molarMass; // g/mol //TODO delete this property? are we using it?
     public final double saturatedConcentration; // M, in beaker
     public final double stockSolutionConcentration; // M, stock solution in dropper
     public final ColorRange solutionColorRange; // color range for a solution with non-zero concentration
@@ -34,15 +33,14 @@ public class Solute {
     public final int particlesPerMole; // number of particles to show per mol of solute
 
     // For most solutes, particles are the same as the color as the saturated solution.
-    public Solute( String name, String formula, double molarMass, double saturatedConcentration, double stockSolutionConcentration, ColorRange solutionColorRange, double particleSize, int particlesPerMole ) {
-        this( name, formula, molarMass, saturatedConcentration, stockSolutionConcentration, solutionColorRange, solutionColorRange.getMax(), particleSize, particlesPerMole );
+    public Solute( String name, String formula, double saturatedConcentration, double stockSolutionConcentration, ColorRange solutionColorRange, double particleSize, int particlesPerMole ) {
+        this( name, formula, saturatedConcentration, stockSolutionConcentration, solutionColorRange, solutionColorRange.getMax(), particleSize, particlesPerMole );
     }
 
-    public Solute( String name, String formula, double molarMass, double saturatedConcentration, double stockSolutionConcentration,
+    public Solute( String name, String formula, double saturatedConcentration, double stockSolutionConcentration,
                    ColorRange solutionColorRange, Color particleColor, double particleSize, int particlesPerMole ) {
         this.name = name;
         this.formula = formula;
-        this.molarMass = molarMass;
         this.saturatedConcentration = saturatedConcentration;
         this.stockSolutionConcentration = stockSolutionConcentration;
         this.solutionColorRange = solutionColorRange;
@@ -61,7 +59,7 @@ public class Solute {
 
     public static class DrinkMix extends Solute {
         public DrinkMix() {
-            super( Strings.DRINK_MIX, BLLSymbols.DRINK_MIX, 342.296, 5.96, 5.50,
+            super( Strings.DRINK_MIX, BLLSymbols.DRINK_MIX, 5.96, 5.50,
                    new ColorRange( new Color( 255, 225, 225 ), Color.RED ),
                    PARTICLE_SIZE, PARTICLES_PER_MOLE );
         }
@@ -69,7 +67,7 @@ public class Solute {
 
     public static class CobaltIINitrate extends Solute {
         public CobaltIINitrate() {
-            super( Strings.COBALT_II_NITRATE, BLLSymbols.COBALT_II_NITRATE, 182.942, 5.64, 5.0,
+            super( Strings.COBALT_II_NITRATE, BLLSymbols.COBALT_II_NITRATE, 5.64, 5.0,
                    new ColorRange( new Color( 255, 225, 225 ), Color.RED ),
                    PARTICLE_SIZE, PARTICLES_PER_MOLE );
         }
@@ -77,7 +75,7 @@ public class Solute {
 
     public static class CobaltChloride extends Solute {
         public CobaltChloride() {
-            super( Strings.COBALT_CHLORIDE, BLLSymbols.COBALT_CHLORIDE, 129.839, 4.33, 4.0,
+            super( Strings.COBALT_CHLORIDE, BLLSymbols.COBALT_CHLORIDE, 4.33, 4.0,
                    new ColorRange( new Color( 255, 242, 242 ), new Color( 0xFF6A6A ) /* rose pink */ ),
                    PARTICLE_SIZE, PARTICLES_PER_MOLE );
         }
@@ -85,7 +83,7 @@ public class Solute {
 
     public static class PotassiumDichromate extends Solute {
         public PotassiumDichromate() {
-            super( Strings.POTASSIUM_DICHROMATE, BLLSymbols.POTASSIUM_DICHROMATE, 294.185, 0.51, 0.50,
+            super( Strings.POTASSIUM_DICHROMATE, BLLSymbols.POTASSIUM_DICHROMATE, 0.51, 0.50,
                    new ColorRange( new Color( 255, 232, 210 ), new Color( 0xFF7F00 ) /* orange */ ),
                    PARTICLE_SIZE, PARTICLES_PER_MOLE );
         }
@@ -93,7 +91,7 @@ public class Solute {
 
     public static class PotassiumChromate extends Solute {
         public PotassiumChromate() {
-            super( Strings.POTASSIUM_CHROMATE, BLLSymbols.POTASSIUM_CHROMATE, 194.191, 3.35, 3.0,
+            super( Strings.POTASSIUM_CHROMATE, BLLSymbols.POTASSIUM_CHROMATE, 3.35, 3.0,
                    new ColorRange( new Color( 255, 255, 199 ), Color.YELLOW ),
                    PARTICLE_SIZE, PARTICLES_PER_MOLE );
         }
@@ -101,7 +99,7 @@ public class Solute {
 
     public static class NickelIIChloride extends Solute {
         public NickelIIChloride() {
-            super( Strings.NICKEL_II_CHLORIDE, BLLSymbols.NICKEL_II_CHLORIDE, 129.599, 5.21, 5.0,
+            super( Strings.NICKEL_II_CHLORIDE, BLLSymbols.NICKEL_II_CHLORIDE, 5.21, 5.0,
                    new ColorRange( new Color( 234, 244, 234 ), new Color( 0x008000 ) /* green */ ),
                    PARTICLE_SIZE, PARTICLES_PER_MOLE );
         }
@@ -109,7 +107,7 @@ public class Solute {
 
     public static class CopperSulfate extends Solute {
         public CopperSulfate() {
-            super( Strings.COPPER_SULFATE, BLLSymbols.COPPER_SULFATE, 159.609, 1.38, 1.0,
+            super( Strings.COPPER_SULFATE, BLLSymbols.COPPER_SULFATE, 1.38, 1.0,
                    new ColorRange( new Color( 222, 238, 255 ), new Color( 0x1E90FF ) /* blue */ ),
                    PARTICLE_SIZE, PARTICLES_PER_MOLE );
         }
@@ -118,7 +116,7 @@ public class Solute {
     // Potassium permanganate has different colors for solution and particles.
     public static class PotassiumPermanganate extends Solute {
         public PotassiumPermanganate() {
-            super( Strings.POTASSIUM_PERMANGANATE, BLLSymbols.POTASSIUM_PERMANGANATE, 158.034, 0.48, 0.4,
+            super( Strings.POTASSIUM_PERMANGANATE, BLLSymbols.POTASSIUM_PERMANGANATE, 0.48, 0.4,
                    new ColorRange( new Color( 255, 0, 255 ), new Color( 0x8B008B ) /* purple */ ), Color.BLACK,
                    PARTICLE_SIZE, PARTICLES_PER_MOLE );
         }
